feat: fix documentation
