# src/database/entities/favs.entity.ts
@@ -1,6 +1,6 @@
-import { Album } from "./album.entity";
-import { Artist } from "./artist.entity";
-import { Track } from "./track.entity";
+import { Album } from './album.entity';
+import { Artist } from './artist.entity';
+import { Track } from './track.entity';
 
 export type Favs = {
   artists: Artist[];
